@@ -1,2 +1,2 @@
-s/^CAMLprim_int64_[0-9](\([a-z0-9_][a-z0-9_]*\)).*/caml_int64_\1\
-caml_int64_\1_native/p
+s/^CAMLprim_int64_[0-9](\([a-z0-9_][a-z0-9_]*\))\(.*\)$/caml_int64_\1\2\
+caml_int64_\1_native\2/p
